crates/carta/tests/snapshots/golden_writer__typst__table__table-colspan.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
#figure(
  align(center)[#table(
    columns: 2,
    align: (auto,auto,),
    table.cell(colspan: 2)[wide],
    [a], [b],
  )]
  , kind: table
  )
