crates/carta/tests/snapshots/golden_writer__typst__table__table-empty-cell.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
#figure(
  align(center)[#table(
    columns: 4,
    align: (auto,auto,auto,auto,),
    table.header([A], [B], [C], [D],),
    table.hline(),
    [

    ], [

    ], [- 
    - 

    ], [ok],
  )]
  , kind: table
  )
