crates/carta/tests/snapshots/golden_writer__typst__table__table-empty.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
#figure(
  align(center)[#table(
    columns: 0,
    align: (),
  )]
  , kind: table
  )
