crates/carta/tests/snapshots/golden_writer__typst__table__table-foot.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
#figure(
  align(center)[#table(
    columns: 2,
    align: (auto,auto,),
    table.header([h1], [h2],),
    table.hline(),
    [a], [b],
    table.hline(),
    table.footer([sum], [3],),
  )]
  , kind: table
  )
