crates/carta/tests/snapshots/golden_writer__typst__table__table-grid-spans.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
#figure(
  align(center)[#table(
    columns: (34.72%, 18.06%, 15.28%, 15.28%),
    align: (auto,auto,auto,auto,),
    table.header([Header row, column 1], [Header 2], [Header 3], [Header
      4],),
    table.hline(),
    [body row 1, column 1], [column 2], [column 3], [column 4],
    [body row 2], table.cell(colspan: 3)[Cells may span columns.],
    [body row 3], table.cell(rowspan: 2)[Cells may span
    rows.], table.cell(rowspan: 2, colspan: 2)[- Cells.
    - Contain.
    - Blocks.

    ],
    [body row 4],
  )]
  , kind: table
  )
