crates/carta/tests/snapshots/golden_writer__typst__table__table-headerless-plain.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
#figure(
  align(center)[#table(
    columns: 2,
    align: (auto,auto,),
    [a], [b],
    [c], [d],
  )]
  , kind: table
  )
