crates/carta/tests/snapshots/golden_writer__typst__table__table-in-blockquote.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
#quote(block: true)[
#figure(
  align(center)[#table(
    columns: 2,
    align: (auto,auto,),
    table.header([a], [b],),
    table.hline(),
    [1], [2],
  )]
  , kind: table
  )
]
