crates/carta/tests/snapshots/golden_writer__typst__table__table-rowspan.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
#figure(
  align(center)[#table(
    columns: 2,
    align: (auto,auto,),
    table.cell(rowspan: 2)[tall], [a],
    [b],
  )]
  , kind: table
  )
